Crash: load new level; array modifier using curve length #38553

Closed
opened 2014-02-09 05:03:15 +01:00 by Alex Fraser · 11 comments
Member

System Information

Ubuntu 13.10, 64-bit; I think it happens on Windows too.
AMD Mobility Radeon HD 5430

Blender Version
Broken: 2.69 a7b1349 (31 Jan), 4393398, b105d2a
Worked: 2.69 7294c54 (23 Dec)

Short description of error

If a game loads a file that contains an object with an array modifier that uses a curve to set its length, blender/blenderplayer will segfault.

Exact steps for others to reproduce the error

  1. Download and unzip: bge_curve_array_crash.zip
  2. Load bge_loader.blend
  3. Press P

The game will start and immediately load bge_curve_array_crash.blend. At that point, it will crash with this stack trace:

bge_curve_array_backtrace.txt

It seems that amd->curve_ob->curve_cache is null.

If you start the game from bge_curve_array_crash.blend (which contains the array object), it does not crash.

**System Information** Ubuntu 13.10, 64-bit; I think it happens on Windows too. AMD Mobility Radeon HD 5430 **Blender Version** Broken: 2.69 a7b1349 (31 Jan), 4393398, b105d2a Worked: 2.69 7294c54 (23 Dec) **Short description of error** If a game loads a file that contains an object with an array modifier that uses a curve to set its length, blender/blenderplayer will segfault. **Exact steps for others to reproduce the error** 1. Download and unzip: [bge_curve_array_crash.zip](https://archive.blender.org/developer/F76534/bge_curve_array_crash.zip) 1. Load `bge_loader.blend` 1. Press `P` The game will start and immediately load `bge_curve_array_crash.blend`. At that point, it will crash with this stack trace: [bge_curve_array_backtrace.txt](https://archive.blender.org/developer/F76535/bge_curve_array_backtrace.txt) It seems that `amd->curve_ob->curve_cache` is `null`. If you start the game from `bge_curve_array_crash.blend` (which contains the array object), it does not crash.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @z0r

Added subscriber: @z0r
Author
Member

I ran a git bisect; it seems the first bad version is ac077f016d. Full log:
bge_curve_bisect.txt

I ran a `git bisect`; it seems the first bad version is ac077f016d3667a3b15853ac79b272cb0b6fd661. Full log: [bge_curve_bisect.txt](https://archive.blender.org/developer/F76564/bge_curve_bisect.txt)
Author
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Author
Member

@Sergey, what do you think about this? To fix this, we could revert ac077f0 apart from the DAG node tagging part - but then we're back to needing a reference to the scene.

@Sergey, what do you think about this? To fix this, we could revert ac077f0 apart from the DAG node tagging part - but then we're back to needing a reference to the scene.
Sergey Sharybin self-assigned this 2014-02-10 07:10:55 +01:00

Would need to look further into this issue. All the stuff which is related on object evaluation should happen strictly in order defined in DAG and there should no be any if(data_is_not_ready) { prepare_data; } things.
But found some more cases when following this rule crashes. Will either find some proper solution or temporary revert the change or until proper solution is ready.

Would need to look further into this issue. All the stuff which is related on object evaluation should happen strictly in order defined in DAG and there should no be any `if(data_is_not_ready) { prepare_data; }` things. But found some more cases when following this rule crashes. Will either find some proper solution or temporary revert the change or until proper solution is ready.

This issue was referenced by blender/blender-addons-contrib@c0a13322cd

This issue was referenced by blender/blender-addons-contrib@c0a13322cdea417885ce9f88d0b42ff0ef62483c

This issue was referenced by c0a13322cd

This issue was referenced by c0a13322cdea417885ce9f88d0b42ff0ef62483c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit c0a13322cd.

Closed by commit c0a13322cd.
Author
Member

Thank you, Sergey! Fix confirmed.

Thank you, Sergey! Fix confirmed.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38553
No description provided.